1999-09-07  Mikael Djurfeldt  <mdj@mdj-pc.nada.kth.se>

	* eval.c (scm_map, scm_for_each): Converted to dispatch on generic
	if args don't match.

	* __scm.h (SCM_WTA_DISPATCH_n, SCM_GASSERTn): New macros.

1999-09-06  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* numbers.c: Converted comparison operations to dispatch on
	generic if args don't match.

	* Makefile.am (ETAGS_ARGS): Added support for GPROC and GPROC1.

1999-09-06  James Blandy  <jimb@mule.m17n.org>

	* guile-snarf.c: Deleted.  Snarfing should respect CPP
	conditionals, so it needs to actually run CPP.  Bleah.

1999-09-05  James Blandy  <jimb@mule.m17n.org>

	Handle errors properly in guile-snarf.  (Thanks to Han-Wen Nienhuys.)
	* guile-snarf.in: Be sure to exit with an error if CPP does.
	* Makefile.am (.c.x): Delete the .x file and exit with an error
	status if guile-snarf exits with an error status.
	* Makefile.in: Regenerated.

	* snarf.h (SCM_GLOBAL_KEYWORD): Call scm_c_make_keyword, not
	scm_makekey, which doesn't exist any more.  Guess nobody's using
	this.

	* guile-snarf.c: New implementation of guile-snarf, meant to be
	more robust than the shell script.  I think it's complete, but I
	haven't tested it at all, and I haven't changed the build process
	to actually use it.  We should compare its output against that of
	the existing shell script, for all source files.

	* guile-snarf.c (parse_args): Abort if we haven't handled some
	character type.

1999-09-03  James Blandy  <jimb@mule.m17n.org>

	* load.c (scm_search_path): If the filename has any extension at
	all, ignore the entire list of extensions.  Also, don't check whether
	the file is accessible.  If the file exists, accessible or not, we
	should return it.  Inaccessible files should cause an error later.
	(Thanks to Keisuke Nishida for the suggestions.)

1999-09-02  Mikael Djurfeldt  <mdj@mdj-pc.nada.kth.se>

	* gc.c (cleanup, scm_init_storage): Use on_exit if present and
	atexit not available.  (sunos4.1.4 needs it.)
